# preprocesing-server

./: .env.example  .gitignore  GUIA_COMPLETA_DEL_PROYECTO.md  README.md  pyproject.toml
src/: main.py
src/application/dto/: transcription_dto.py
src/application/use_cases/: finalize_transcription.py  process_audio_chunk.py  start_session.py
src/domain/entities/: transcription.py
src/domain/repositories/: session_repository.py  transcription_repository.py
src/domain/services/: event_publisher.py  quality_validator.py  transcriber.py
src/infrastructure/config/: settings.py
src/infrastructure/di/: container.py
src/infrastructure/kafka/: kafka_event_publisher.py
src/infrastructure/logging/: setup.py
src/infrastructure/redis/: in_memory_session_repository.py  redis_session_repository.py  redis_stream_publisher.py
src/infrastructure/speech/: faster_whisper_adapter.py
src/infrastructure/websocket/: connection_manager.py
src/presentation/health/: health_routes.py
src/presentation/websocket/: transcription_ws.py
tests/: conftest.py
tests/integration/: test_health_routes.py  test_redis_publisher.py  test_websocket_handler.py
tests/unit/application/: test_use_cases.py
tests/unit/domain/: test_transcription.py
